# aics-segmentation

./: .gitignore  pyproject.toml  setup.py
aicssegmentation/: __init__.py  exceptions.py
aicssegmentation/cli/: to_analysis.py
aicssegmentation/core/: MO_threshold.py  hessian.py  output_utils.py  pre_processing_utils.py  seg_dot.py  utils.py  vessel.py  visual.py
aicssegmentation/structure_wrapper/: seg_PCNA_earlyS_midS.py  seg_PCNA_lateS.py  seg_PCNA_lateS_hole_fill.py  seg_actb.py  seg_actn1.py  seg_atp2a2.py  seg_cardio_actn2.py  seg_cardio_atp2a2.py  seg_cardio_fbl.py  seg_cardio_fbl_100x.py  seg_cardio_myl7.py  seg_cardio_npm1.py  seg_cardio_npm1_100x.py  seg_cardio_tnni1.py  seg_cardio_ttn.py  seg_cetn2.py  seg_ctnnb1.py  seg_drug_npm1.py  seg_dsp.py  seg_fbl.py  seg_fbl_labelfree_4dn.py  seg_gja1.py  seg_h2b_interphase.py  seg_lamp1.py  seg_lmnb1_interphase.py  seg_lmnb1_mitotic.py  seg_myh10.py  seg_npm1.py  seg_npm1_SR.py  seg_npm_labelfree_4dn.py  seg_nup153.py  seg_polr2a.py  seg_polr2a_blob.py  seg_pxn.py  seg_rab5a.py  seg_sec61b.py  seg_sec61b_dual.py  seg_slc25a17.py  seg_smc1a.py  seg_son.py  (+7 more)
aicssegmentation/tests/: test_config.py  (+1 more)
docs/: conf.py
lookup_table_demo/: bridging_the_gap_between_binary_image_and_analysis.ipynb  demo_TNNI1.ipynb  playground_Sec61b.ipynb  playground_curvi.ipynb  playground_curvi_WorkshopOct2019.ipynb  playground_dots.ipynb  playground_filament3d.ipynb  playground_gja1.ipynb  playground_lamp1.ipynb  playground_npm1.ipynb  playground_shell.ipynb  playground_spotty.ipynb  playground_st6gal1.ipynb  test_viewer.ipynb
(+17 files in other folders)
