[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicssegmentation"
dynamic = ["version"]
description = "Part 1 of Allen Cell and Structure Segmenter"
readme = "README.md"
license = { text = "Allen Institute Software License" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "tifffile>=2021.8",
]

[project.optional-dependencies]
io = [
    "aicsimageio>=4.14",
]

[project.scripts]
batch_processing = "aicssegmentation.bin.batch_processing:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.version]
path = "aicssegmentation/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["aicssegmentation"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
length-sort = true

[tool.pytest.ini_options]
testpaths = ["aicssegmentation/tests"]
